# ArgParse-Cpp

./: .ArgParser.cpp.swp  .ThrowExceptionArguments.h.swp  .utils.h.swp  ArgParser.h  CMakeCache.txt  CMakeLists.txt  ConvertMode.cpp  ConvertMode.h  LICENSE  Makefile  Mode.cpp  Mode.h  PhotoBatch  PhotoBatch.cpp  README.md  RenameMode.cpp  RenameMode.h  ThrowExceptionArguments.h  cmake_install.cmake  help.h  utils.h
Tests/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  testArgumentParser  testArgumentParser.cpp
